<resources>
    <string name="sharedpreferences_file_key">shared preferences</string>

    <string name="app_name">ShareShopping</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="accept">Accept</string>

    <string name="enter_product_name">Enter product name</string>
    <string name="enter_list_name">Enter list name</string>

    <string name="choose_what_you_want_to_do">Choose what you want to do</string>
    <string name="are_you_sure_you_want_to_log_out_question">Are you sure you want to log out?</string>
    <string name="dont_have_account_yet_question">Don\'t have account yet?</string>
    <string name="are_you_sure_you_want_to_delete_this_list_question">Are you sure you want to delete this list?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="shopping_lists">Shopping lists</string>

    <!--errors-->
    <string name="invalid_login_or_password">Invalid login or password</string>

</resources>
